# Strata

./: .gitignore  README.md  pyproject.toml
benchmarks/: m0_baseline.md
scripts/: run_m1.py  run_m2.py  run_m3.py
strata/: engine.py  kv_cache.py  model.py
tests/: test_batch_prompt.py  test_kv_cache_repack.py  test_m1_correctness.py  test_m2_correctness.py  test_m3_correctness.py
